[package]
name = "with_concat_ident"
version = "0.1.0"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.proc-macro]
package = "with_concat_ident_proc-macro"
version = "0.1.0"  # Same as package.version
path = "src/proc-macro"
